examples/failing/TypeWildcards1.purs
module TypeWildcards where

type Test = _

